@@ -4,6 +4,7 @@ import com.carrental.model.CarType;
 import com.carrental.model.Reservation;
 import com.carrental.vehicle.Vehicle;
 
+import java.time.temporal.ChronoUnit;
 import java.time.LocalDateTime;
 import java.util.*;
 
@@ -29,6 +30,10 @@ public class Inventory {
         vehiclesByType.computeIfAbsent(vehicle.getCarType(), k -> new ArrayList<>()).add(vehicle);
     }
 
+    public List<Vehicle> getVehiclesByType(CarType carType) {
+        return List.copyOf(vehiclesByType.getOrDefault(carType, Collections.emptyList()));
+    }
+
     /**
      * Searches for an available vehicle of the given type that is free for
      * the provided date/time range. If no vehicle is free, {@code null}
@@ -44,20 +49,18 @@ public class Inventory {
     public Vehicle findAvailableVehicle(CarType carType, LocalDateTime start, LocalDateTime end) {
         List<Vehicle> vehicles = vehiclesByType.getOrDefault(carType, Collections.emptyList());
         for (Vehicle vehicle : vehicles) {
-            List<Reservation> reservations = reservationsByVehicle.getOrDefault(vehicle.getVehicleId(), Collections.emptyList());
-            boolean available = true;
-            for (Reservation reservation : reservations) {
-                // Overlap condition: existingStart < requestedEnd AND requestedStart < existingEnd
-                if (reservation.getStartDateTime().isBefore(end) && start.isBefore(reservation.getEndDateTime())) {
-                    available = false;
-                    break;
-                }
-            }
-            if (available) {
+            if (isVehicleAvailable(vehicle, start, end)) {
                 return vehicle;
             }
         }
         return null;
+    }
+
+    public long countAvailableVehicles(CarType carType, LocalDateTime referenceTime) {
+        return vehiclesByType.getOrDefault(carType, Collections.emptyList())
+                .stream()
+                .filter(vehicle -> isVehicleAvailableAt(vehicle, referenceTime))
+                .count();
     }
 
     /**
@@ -78,7 +81,13 @@ public class Inventory {
      * @return list of reservations for that vehicle
      */
     public List<Reservation> getReservationsForVehicle(String vehicleId) {
-        return Collections.unmodifiableList(reservationsByVehicle.getOrDefault(vehicleId, Collections.emptyList()));
+        return List.copyOf(reservationsByVehicle.getOrDefault(vehicleId, Collections.emptyList()));
+    }
+
+    public List<Reservation> getAllReservations() {
+        return reservationsByVehicle.values().stream()
+                .flatMap(List::stream)
+                .toList();
     }
 
     /**
@@ -99,5 +108,24 @@ public class Inventory {
             }
         }
         return null;
+    }
+
+    private boolean isVehicleAvailable(Vehicle vehicle, LocalDateTime start, LocalDateTime end) {
+        List<Reservation> reservations = reservationsByVehicle.getOrDefault(vehicle.getVehicleId(), Collections.emptyList());
+        for (Reservation reservation : reservations) {
+            // Overlap condition: existingStart < requestedEnd AND requestedStart < existingEnd
+            if (reservation.getStartDateTime().isBefore(end) && start.isBefore(reservation.getEndDateTime())) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean isVehicleAvailableAt(Vehicle vehicle, LocalDateTime referenceTime) {
+        // Reuse the overlap check with a 1-millisecond window so point-in-time
+        // availability follows the same millisecond-precision rules as bookings.
+        LocalDateTime start = referenceTime.truncatedTo(ChronoUnit.MILLIS);
+        LocalDateTime end = start.plus(1, ChronoUnit.MILLIS);
+        return isVehicleAvailable(vehicle, start, end);
     }
 }
